base/sshwifty/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sshwifty
  namespace: sshwifty
spec:
  ports:
  - port: 80
    targetPort: 8182
  selector:
    app: sshwifty
