base/sshwifty/ing.yaml
# Ab K8s 1.19
apiVersion: networking.k8s.io/v1
kind:       Ingress
metadata:
  name: sshwifty
  namespace: sshwifty
spec:
  rules:
  - host: sshwifty.${clustername}.${domain}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:  
            name: sshwifty
            port:
              number: 80
